добавлен JS Lesson13, дополнила немного

--- a/Javascript/Lesson13/menu.html
+++ b/Javascript/Lesson13/menu.html
@@ -15,9 +15,11 @@
     <div>
         <header>
             <a href="">ITStep</a>
-            <span></span>
-            <span></span>
-            <span></span>
+            <button>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <nav>
                 <ul>
                     <li>Главная</li>
