--- a/Artefacts/index.html
+++ b/Artefacts/index.html
@@ -12,6 +12,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="../Artefacts/css/owl_carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="../Artefacts/css/owl_carousel/owl.theme.default.min.css">
+
     <link rel="stylesheet" href="/Artefacts/css/custom.css">
 </head>
 <body>
@@ -59,6 +62,113 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section id="carousel">
+            <div class="container">
+                <div class="owl-carousel cards">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts1.png" alt="">
+                            <span>2.4</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 1 (plant)</h3>
+                            <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего мира своевременно верифицированы.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts2.png" alt="">
+                            <span>3.1</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 2 (flower)</h3>
+                            <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации условий.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts3.png" alt="">
+                            <span>1.2</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 3 (leaf)</h3>
+                            <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены сами себе для работы.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts4.png" alt="">
+                            <span>1.4</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 4 (wood)</h3>
+                            <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts1.png" alt="">
+                            <span>2.4</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 1 (plant)</h3>
+                            <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего мира своевременно верифицированы.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts2.png" alt="">
+                            <span>3.1</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 2 (flower)</h3>
+                            <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации условий.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts3.png" alt="">
+                            <span>1.2</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 3 (leaf)</h3>
+                            <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены сами себе для работы.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./img/carts/carts4.png" alt="">
+                            <span>1.4</span>
+                        </div>
+                        <div class="card-content d-flex flex-column">
+                            <h3>Fig. 4 (wood)</h3>
+                            <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
+                            <a href="" class="button mt-auto">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-nav">
+                    <button type="button" role="presentation" class="owl-prev disabled" id="slider-left">
+                        <svg width="26" height="16" viewBox="0 0 26 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0.292892 7.29289C-0.0976315 7.68342 -0.0976315 8.31658 0.292892 8.70711L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34315C8.46159 1.95262 8.46159 1.31946 8.07107 0.928932C7.68054 0.538408 7.04738 0.538408 6.65685 0.928932L0.292892 7.29289ZM26 7L1 7V9L26 9V7Z" fill="#899D9D"/>
+                            </svg>                        
+                    </button>
+                    <span aria-label="Next">1 из 3</span>
+                    <button type="button" role="presentation" class="owl-next" id="slider-right">
+                        <svg width="26" height="16" viewBox="0 0 26 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M25.7071 8.70711C26.0976 8.31658 26.0976 7.68342 25.7071 7.2929L19.3431 0.928934C18.9526 0.538409 18.3195 0.538409 17.9289 0.928934C17.5384 1.31946 17.5384 1.95262 17.9289 2.34315L23.5858 8L17.9289 13.6569C17.5384 14.0474 17.5384 14.6805 17.9289 15.0711C18.3195 15.4616 18.9526 15.4616 19.3431 15.0711L25.7071 8.70711ZM-8.74228e-08 9L25 9L25 7L8.74228e-08 7L-8.74228e-08 9Z" fill="#899D9D"/>
+                            </svg>                        
+                    </button>
+                </div>
+            </div>   
         </section>
     </main>
     <f>
@@ -155,5 +265,8 @@
       </div>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+      <script src="../Artefacts/js/Jquary/jquary.js"></script>
+      <script src="../Artefacts/js/owl_carousel/owl.carousel.min.js"></script>
+      <script src="./js/custom.js"></script>
 </body>
 </html>
