исправили ошибку в папке Artefacts

--- a/Artefacts/index.html
+++ b/Artefacts/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../Artefacts/css/owl_carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="../Artefacts/css/owl_carousel/owl.theme.default.min.css">
 
-    <link rel="stylesheet" href="/Artefacts/css/custom.css">
+    <link rel="stylesheet" href="./css/custom.css">
 </head>
 <body>
     <header>
