--- a/Javascript/Lesson18/index.html
+++ b/Javascript/Lesson18/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo</title>
-<script defer src="bundle.e1eff7fe6650175abd61.js"></script><link href="index.e1eff7fe6650175abd61.css" rel="stylesheet"></head>
+    <title>Document</title>
+</head>
 <body>
-    <div class="todo">
-    </div>
+    
+    <script src="./index.js"></script>
 </body>
 </html>
